nars_prolog/src/main/java/nars/jwam/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package nars.jwam.parser;

import java.util.ArrayList;

/**
 * The parser (that acts as part of the compiler) to convert <code>String</code>
 * objects to WAM heaps.
 *
 * @author Bas Testerink, Utrecht University, The Netherlands
 *
 */
public class Parser implements ParserConstants {

    private ToHeap toHeap = null;

    public ToHeap getToHeap() {
        return toHeap;
    }

    public void setToHeap(ToHeap th) {
        this.toHeap = th;
    }

    /* PROLOG */
// Argument of a predicate or list. 
    final public void Argument() throws ParseException {
        if (jj_2_1(2147483647)) {
            Infix();
        } else if (jj_2_2(2147483647)) {
            Number();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CHARACTER_LITERAL:
                case STD_IDENTIFIER:
                case LPAREN:
                case SEMICOLON:
                case NOTSPACE:
                case ADD:
                case RULEIMPLY:
                case SUBTRACT:
                case IMPLY:
                case MULTIPLY:
                case POWER:
                case DIVIDE:
                case BITAND:
                case UNIFICATION:
                case ARITHUNIF:
                case ARITHNOTUNIF:
                case EQLT:
                case TERMDECOMPOSITION:
                case EQUALS:
                case BACKSLASH:
                case NOT:
                case BITOR:
                case NOTUNIFIABLE:
                case NOTEQUALS:
                case TERMGTEQ:
                case TERMEQLT:
                case TERMLT:
                case TERMGT:
                case TERMEQ:
                case TERMNEQ:
                case LT:
                case SHIFTLEFT:
                case GT:
                case SHIFTRIGHT:
                case GTEQ:
                case ASSIGN:
                case POWER2:
                case XOR:
                case REMAINDER:
                case INTDIVIDE:
                case MODULO:
                case COLON:
                case NORMAND:
                    Predicate();
                    break;
                case VAR_IDENTIFIER:
                    Var();
                    break;
                case LBRACKET:
                    List();
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

// Number. Ends with s if simple, will be stored as doubles otherwise.
    final public void Number() throws ParseException {
        Token t = null, t2;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case SUBTRACT:
                t = jj_consume_token(SUBTRACT);
                break;
            default:
                jj_la1[1] = jj_gen;
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case INTEGER_LITERAL:
                t2 = jj_consume_token(INTEGER_LITERAL);
                break;
            case FLOATING_POINT_LITERAL:
                t2 = jj_consume_token(FLOATING_POINT_LITERAL);
                break;
            default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        toHeap.addNum((t != null ? t.image : "") + t2.image);
    }

// Predicate. Also includes constants.
    final public void Predicate() throws ParseException {
        Token name = null;
        String nameToPL = "";
        toHeap.initiatePrologStructure();
        if (jj_2_3(3)) {
            jj_consume_token(NOTSPACE);
            nameToPL = "not";
            Predicate();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CHARACTER_LITERAL:
                case STD_IDENTIFIER:
                case SEMICOLON:
                case NOTSPACE:
                case ADD:
                case RULEIMPLY:
                case SUBTRACT:
                case IMPLY:
                case MULTIPLY:
                case POWER:
                case DIVIDE:
                case BITAND:
                case UNIFICATION:
                case ARITHUNIF:
                case ARITHNOTUNIF:
                case EQLT:
                case TERMDECOMPOSITION:
                case EQUALS:
                case BACKSLASH:
                case NOT:
                case BITOR:
                case NOTUNIFIABLE:
                case NOTEQUALS:
                case TERMGTEQ:
                case TERMEQLT:
                case TERMLT:
                case TERMGT:
                case TERMEQ:
                case TERMNEQ:
                case LT:
                case SHIFTLEFT:
                case GT:
                case SHIFTRIGHT:
                case GTEQ:
                case ASSIGN:
                case POWER2:
                case XOR:
                case REMAINDER:
                case INTDIVIDE:
                case MODULO:
                case COLON:
                case NORMAND:
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case STD_IDENTIFIER:
                            name = jj_consume_token(STD_IDENTIFIER);
                            break;
                        case CHARACTER_LITERAL:
                            name = jj_consume_token(CHARACTER_LITERAL);
                            break;
                        case SEMICOLON:
                        case NOTSPACE:
                        case ADD:
                        case RULEIMPLY:
                        case SUBTRACT:
                        case IMPLY:
                        case MULTIPLY:
                        case POWER:
                        case DIVIDE:
                        case BITAND:
                        case UNIFICATION:
                        case ARITHUNIF:
                        case ARITHNOTUNIF:
                        case EQLT:
                        case TERMDECOMPOSITION:
                        case EQUALS:
                        case BACKSLASH:
                        case NOT:
                        case BITOR:
                        case NOTUNIFIABLE:
                        case NOTEQUALS:
                        case TERMGTEQ:
                        case TERMEQLT:
                        case TERMLT:
                        case TERMGT:
                        case TERMEQ:
                        case TERMNEQ:
                        case LT:
                        case SHIFTLEFT:
                        case GT:
                        case SHIFTRIGHT:
                        case GTEQ:
                        case ASSIGN:
                        case POWER2:
                        case XOR:
                        case REMAINDER:
                        case INTDIVIDE:
                        case MODULO:
                        case COLON:
                        case NORMAND:
                            name = Operator();
                            break;
                        default:
                            jj_la1[3] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                    nameToPL = name.image;
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case LPAREN:
                            jj_consume_token(LPAREN);
                            Argument();
                            label_1:
                            while (true) {
                                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                    case COMMA:
                                        break;
                                    default:
                                        jj_la1[4] = jj_gen;
                                        break label_1;
                                }
                                jj_consume_token(COMMA);
                                Argument();
                            }
                            jj_consume_token(RPAREN);
                            break;
                        default:
                            jj_la1[5] = jj_gen;
                    }
                    break;
                case LPAREN:
                    jj_consume_token(LPAREN);
                    Argument();
                    nameToPL = ",";
                    label_2:
                    while (true) {
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case COMMA:
                                break;
                            default:
                                jj_la1[6] = jj_gen;
                                break label_2;
                        }
                        jj_consume_token(COMMA);
                        Argument();
                    }
                    jj_consume_token(RPAREN);
                    break;
                default:
                    jj_la1[7] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        toHeap.finishStructure(nameToPL);
    }

// Get the used operator.
    final public Token Operator() throws ParseException {
        Token t;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ADD:
                t = jj_consume_token(ADD);
                break;
            case SUBTRACT:
                t = jj_consume_token(SUBTRACT);
                break;
            case IMPLY:
                t = jj_consume_token(IMPLY);
                break;
            case MULTIPLY:
                t = jj_consume_token(MULTIPLY);
                break;
            case POWER:
                t = jj_consume_token(POWER);
                break;
            case DIVIDE:
                t = jj_consume_token(DIVIDE);
                break;
            case BITAND:
                t = jj_consume_token(BITAND);
                break;
            case UNIFICATION:
                t = jj_consume_token(UNIFICATION);
                break;
            case ARITHUNIF:
                t = jj_consume_token(ARITHUNIF);
                break;
            case ARITHNOTUNIF:
                t = jj_consume_token(ARITHNOTUNIF);
                break;
            case EQLT:
                t = jj_consume_token(EQLT);
                break;
            case TERMDECOMPOSITION:
                t = jj_consume_token(TERMDECOMPOSITION);
                break;
            case EQUALS:
                t = jj_consume_token(EQUALS);
                break;
            case BACKSLASH:
                t = jj_consume_token(BACKSLASH);
                break;
            case BITOR:
                t = jj_consume_token(BITOR);
                break;
            case NOTUNIFIABLE:
                t = jj_consume_token(NOTUNIFIABLE);
                break;
            case NOTEQUALS:
                t = jj_consume_token(NOTEQUALS);
                break;
            case TERMGTEQ:
                t = jj_consume_token(TERMGTEQ);
                break;
            case TERMEQLT:
                t = jj_consume_token(TERMEQLT);
                break;
            case TERMLT:
                t = jj_consume_token(TERMLT);
                break;
            case TERMGT:
                t = jj_consume_token(TERMGT);
                break;
            case TERMEQ:
                t = jj_consume_token(TERMEQ);
                break;
            case TERMNEQ:
                t = jj_consume_token(TERMNEQ);
                break;
            case LT:
                t = jj_consume_token(LT);
                break;
            case SHIFTLEFT:
                t = jj_consume_token(SHIFTLEFT);
                break;
            case GT:
                t = jj_consume_token(GT);
                break;
            case SHIFTRIGHT:
                t = jj_consume_token(SHIFTRIGHT);
                break;
            case GTEQ:
                t = jj_consume_token(GTEQ);
                break;
            case ASSIGN:
                t = jj_consume_token(ASSIGN);
                break;
            case POWER2:
                t = jj_consume_token(POWER2);
                break;
            case XOR:
                t = jj_consume_token(XOR);
                break;
            case REMAINDER:
                t = jj_consume_token(REMAINDER);
                break;
            case INTDIVIDE:
                t = jj_consume_token(INTDIVIDE);
                break;
            case MODULO:
                t = jj_consume_token(MODULO);
                break;
            case COLON:
                t = jj_consume_token(COLON);
                break;
            case NORMAND:
                t = jj_consume_token(NORMAND);
                break;
            case NOTSPACE:
                t = jj_consume_token(NOTSPACE);
                break;
            case SEMICOLON:
                t = jj_consume_token(SEMICOLON);
                break;
            case NOT:
                t = jj_consume_token(NOT);
                break;
            case RULEIMPLY:
                t = jj_consume_token(RULEIMPLY);
                break;
            default:
                jj_la1[8] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if (true) {
                return t;
            }
        }
        throw new Error("Missing return statement in function");
    }

// Possible body parts of a rule.
    final public void Bodypart() throws ParseException {
        if (jj_2_4(2147483647)) {
            Infix();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CHARACTER_LITERAL:
                case STD_IDENTIFIER:
                case LPAREN:
                case SEMICOLON:
                case NOTSPACE:
                case ADD:
                case RULEIMPLY:
                case SUBTRACT:
                case IMPLY:
                case MULTIPLY:
                case POWER:
                case DIVIDE:
                case BITAND:
                case UNIFICATION:
                case ARITHUNIF:
                case ARITHNOTUNIF:
                case EQLT:
                case TERMDECOMPOSITION:
                case EQUALS:
                case BACKSLASH:
                case NOT:
                case BITOR:
                case NOTUNIFIABLE:
                case NOTEQUALS:
                case TERMGTEQ:
                case TERMEQLT:
                case TERMLT:
                case TERMGT:
                case TERMEQ:
                case TERMNEQ:
                case LT:
                case SHIFTLEFT:
                case GT:
                case SHIFTRIGHT:
                case GTEQ:
                case ASSIGN:
                case POWER2:
                case XOR:
                case REMAINDER:
                case INTDIVIDE:
                case MODULO:
                case COLON:
                case NORMAND:
                    Predicate();
                    break;
                case VAR_IDENTIFIER:
                    Var();
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
    }

// An infix operator is stored as a prefix predicate. E.g. "1 + 2" = "+(1,2)". Uses left hand preference:
// "1 + 2 + 3" = "+(1,+(2,3))".
    final public void Infix() throws ParseException {
        Token name;
        toHeap.initiatePrologStructure();
        if (jj_2_5(2147483647)) {
            Number();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CHARACTER_LITERAL:
                case STD_IDENTIFIER:
                case LPAREN:
                case SEMICOLON:
                case NOTSPACE:
                case ADD:
                case RULEIMPLY:
                case SUBTRACT:
                case IMPLY:
                case MULTIPLY:
                case POWER:
                case DIVIDE:
                case BITAND:
                case UNIFICATION:
                case ARITHUNIF:
                case ARITHNOTUNIF:
                case EQLT:
                case TERMDECOMPOSITION:
                case EQUALS:
                case BACKSLASH:
                case NOT:
                case BITOR:
                case NOTUNIFIABLE:
                case NOTEQUALS:
                case TERMGTEQ:
                case TERMEQLT:
                case TERMLT:
                case TERMGT:
                case TERMEQ:
                case TERMNEQ:
                case LT:
                case SHIFTLEFT:
                case GT:
                case SHIFTRIGHT:
                case GTEQ:
                case ASSIGN:
                case POWER2:
                case XOR:
                case REMAINDER:
                case INTDIVIDE:
                case MODULO:
                case COLON:
                case NORMAND:
                    Predicate();
                    break;
                case VAR_IDENTIFIER:
                    Var();
                    break;
                case LBRACKET:
                    List();
                    break;
                default:
                    jj_la1[10] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        name = Operator();
        Argument();
        toHeap.finishStructure(name.image);
    }

// Parse lists, not that []  is also parsed as a list rather than a constant.
    final public void List() throws ParseException {
        int c = 0;
        toHeap.initiatePrologStructure();
        jj_consume_token(LBRACKET);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case INTEGER_LITERAL:
            case FLOATING_POINT_LITERAL:
            case CHARACTER_LITERAL:
            case STD_IDENTIFIER:
            case VAR_IDENTIFIER:
            case LPAREN:
            case LBRACKET:
            case SEMICOLON:
            case NOTSPACE:
            case ADD:
            case RULEIMPLY:
            case SUBTRACT:
            case IMPLY:
            case MULTIPLY:
            case POWER:
            case DIVIDE:
            case BITAND:
            case UNIFICATION:
            case ARITHUNIF:
            case ARITHNOTUNIF:
            case EQLT:
            case TERMDECOMPOSITION:
            case EQUALS:
            case BACKSLASH:
            case NOT:
            case BITOR:
            case NOTUNIFIABLE:
            case NOTEQUALS:
            case TERMGTEQ:
            case TERMEQLT:
            case TERMLT:
            case TERMGT:
            case TERMEQ:
            case TERMNEQ:
            case LT:
            case SHIFTLEFT:
            case GT:
            case SHIFTRIGHT:
            case GTEQ:
            case ASSIGN:
            case POWER2:
            case XOR:
            case REMAINDER:
            case INTDIVIDE:
            case MODULO:
            case COLON:
            case NORMAND:
                if (jj_2_6(3)) {
                    Argument();
                    label_3:
                    while (true) {
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case COMMA:
                                break;
                            default:
                                jj_la1[11] = jj_gen;
                                break label_3;
                        }
                        jj_consume_token(COMMA);
                        toHeap.initiatePrologStructure();
                        c++;
                        Argument();
                    }
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case BAR:
                            jj_consume_token(BAR);
                            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                case LBRACKET:
                                    List();
                                    break;
                                case VAR_IDENTIFIER:
                                    Var();
                                    break;
                                default:
                                    jj_la1[12] = jj_gen;
                                    jj_consume_token(-1);
                                    throw new ParseException();
                            }
                            break;
                        default:
                            jj_la1[13] = jj_gen;
                    }
                } else if (jj_2_7(3)) {
                    Argument();
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case BAR:
                            jj_consume_token(BAR);
                            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                case LBRACKET:
                                    List();
                                    break;
                                case VAR_IDENTIFIER:
                                    Var();
                                    break;
                                default:
                                    jj_la1[14] = jj_gen;
                                    jj_consume_token(-1);
                                    throw new ParseException();
                            }
                            break;
                        default:
                            jj_la1[15] = jj_gen;
                    }
                } else {
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                break;
            default:
                jj_la1[16] = jj_gen;
        }
        jj_consume_token(RBRACKET);
        for (int i = 0; i <= c; i++) {
            toHeap.finishList();
        }
    }

// Variable.
    final public void Var() throws ParseException {
        Token name;
        name = jj_consume_token(VAR_IDENTIFIER);
        toHeap.addVar(name.image);
    }

// A rule. These are stored on the heap as :-(head,bodypt1,bodypt2...) if there is a body involved.
    final public void Rule() throws ParseException {
        toHeap.startRule();
        if (jj_2_8(2147483647)) {
            toHeap.initiatePrologStructure();
            Predicate();
            jj_consume_token(RULEIMPLY);
            Bodypart();
            label_4:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case COMMA:
                        break;
                    default:
                        jj_la1[17] = jj_gen;
                        break label_4;
                }
                jj_consume_token(COMMA);
                Bodypart();
            }
            toHeap.finishStructure(":-");
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CHARACTER_LITERAL:
                case STD_IDENTIFIER:
                case LPAREN:
                case SEMICOLON:
                case NOTSPACE:
                case ADD:
                case RULEIMPLY:
                case SUBTRACT:
                case IMPLY:
                case MULTIPLY:
                case POWER:
                case DIVIDE:
                case BITAND:
                case UNIFICATION:
                case ARITHUNIF:
                case ARITHNOTUNIF:
                case EQLT:
                case TERMDECOMPOSITION:
                case EQUALS:
                case BACKSLASH:
                case NOT:
                case BITOR:
                case NOTUNIFIABLE:
                case NOTEQUALS:
                case TERMGTEQ:
                case TERMEQLT:
                case TERMLT:
                case TERMGT:
                case TERMEQ:
                case TERMNEQ:
                case LT:
                case SHIFTLEFT:
                case GT:
                case SHIFTRIGHT:
                case GTEQ:
                case ASSIGN:
                case POWER2:
                case XOR:
                case REMAINDER:
                case INTDIVIDE:
                case MODULO:
                case COLON:
                case NORMAND:
                    Predicate();
                    break;
                default:
                    jj_la1[18] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        jj_consume_token(DOT);
        toHeap.finishRule();
    }

    final public void Query() throws ParseException {
        toHeap.startQuery();
        jj_consume_token(QUESTION);
        toHeap.initiatePrologStructure();
        Bodypart();
        label_5:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COMMA:
                    break;
                default:
                    jj_la1[19] = jj_gen;
                    break label_5;
            }
            jj_consume_token(COMMA);
            Bodypart();
        }
        jj_consume_token(DOT);
        toHeap.finishStructure(":-");
        toHeap.finishQuery();
    }

    final public void Directive() throws ParseException {
        Token t = null, t2 = null;
        ArrayList<String> arguments = new ArrayList<>();
        jj_consume_token(RULEIMPLY);
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case INTEGER_LITERAL:
                case STD_IDENTIFIER:
                    break;
                default:
                    jj_la1[20] = jj_gen;
                    break label_6;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case STD_IDENTIFIER:
                    t = jj_consume_token(STD_IDENTIFIER);
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case DIVIDE:
                            jj_consume_token(DIVIDE);
                            t2 = jj_consume_token(INTEGER_LITERAL);
                            break;
                        default:
                            jj_la1[21] = jj_gen;
                    }
                    break;
                case INTEGER_LITERAL:
                    t = jj_consume_token(INTEGER_LITERAL);
                    break;
                default:
                    jj_la1[22] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            arguments.add(t.image + (t2 == null ? "" : ("/" + t2.image)));
            t2 = null;
        }
        jj_consume_token(DOT);
        toHeap.addDirective(arguments);
    }
